--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     <!-- PopAds.net Popunder Code End-->
   </head>
 
-  <body ng-controller="con" ng-init="checkFB();init()">
+  <body ng-controller="con" ng-init="init()">
     <div id="login" ng-show="!loggedIn">
       <img src="./images/play.jpg" ng-click="login()" alt="มาเล่นทายตัวละครกันเถอะ,ฉันคือใครในเหล่าอนิเมะ,who am i?,who am i.io,ฉันคือใคร?" />
     </div>
@@ -149,20 +149,5 @@
         return false;  //Prevent from ctrl+shift+i
     });
     </script>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- ionic banner -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-7197999805164308"
-         data-ad-slot="5862004272"
-         data-ad-format="auto"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-
   </body>
 </html>
